Removed Tensor internal helper routines and completed dummy APIs for forward convolution

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,6 +49,9 @@ set( MLOpen_Source
 	Tensor.cpp
 	Tensor.hpp
 	Tensor_API.cpp
+	Convolution.hpp
+	Convolution.cpp
+	Convolution_API.cpp
 	KernelCache.cpp
 	KernelCache.hpp
 	include/mlopenTypes.h
