Created Handle_API.cpp and moved definitions of host_side APIs to that. Also moved the specializations of Handle methods to .cpp with only declaration in .h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
 set( MLOpen_Source
 	Handle.cpp
 	Handle.hpp
+	Handle_API.cpp
 	Tensor.cpp
 	Tensor.hpp
 	Tensor_API.cpp
@@ -62,7 +63,7 @@ include_directories (
 	)
 
 # build library
-add_library( MLOpen
+add_library( MLOpen SHARED
 	${MLOpen_Source}
 	${MLOpen_API}
 	)
