Added definition of Tensor::SetDataType and added print debug statements. Rectified the call to ScaleTensor in mlopenScaleTensor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ if( USE_Cobalt)
 endif()
 
 set ( MLOpen_Headers_Public
-	include/MLOpen.h
+	${PROJECT_SOURCE_DIR}/include/MLOpen.h
 	${PROJECT_BINARY_DIR}/src/include/MLOpen-version.h
 	)
 
