added new files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,6 +58,8 @@ set( MLOpen_Source
 	OCLKernel.hpp
 	OCLKernel.cpp
 	include/mlopenTypes.h
+	mloCLUtil.cpp
+	mloConv.cpp
 	)
 
 include_directories (
