exporting the symbols properly so that it builds on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,9 @@ set ( MLOpen_Headers_Public
 set( MLOpen_DIRS_INCLUDE
 	${CMAKE_SOURCE_DIR}/include
 	${CMAKE_SOURCE_DIR}/src/include
-	${CMAKE_SOURCE_DIR}/src)
+	${CMAKE_SOURCE_DIR}/src
+	${PROJECT_BINARY_DIR}/src)
+
 set( MLOpen_API ${CMAKE_SOURCE_DIR}/include/MLOpen.h )
 source_group( "Header Files\\Public" FILES ${MLOpen_Headers_Public} )
 
