--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -18,7 +18,7 @@ target_link_libraries(MLOpenDriver MLOpen)
 
 # MLOpen depends on OpenCL
 if( MLOpen_BACKEND MATCHES "OpenCL")
-	MESSAGE( "MLOpen linking OpenCL: ${OPENCL_INCLUDE_DIRS}" )
+	MESSAGE( STATUS "MLOpen linking OpenCL: ${OPENCL_INCLUDE_DIRS}" )
 	include_directories( ${OPENCL_INCLUDE_DIRS} )
 	target_link_libraries( MLOpenDriver ${OPENCL_LIBRARIES} )
 endif()
