Add remaining tests from driver

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,9 @@ function(add_test_executable TEST_NAME)
     if(WIN32)
         add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${LIBRARY_OUTPUT_PATH} COMMAND $<TARGET_FILE:${TEST_NAME}>)
     else()
-        add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>)
+        # add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>)
+        # TODO: Quick hack to fix relative paths to kernels
+        add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND $<TARGET_FILE:${TEST_NAME}>)
     endif()
     add_dependencies(tests ${TEST_NAME})
     add_dependencies(check ${TEST_NAME})
