Changed tensor and convolution template-specializations to overloaded functions for HIP vs OCL

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,8 +63,7 @@ set( MLOpen_Source
 	mloDirConv.cpp
 	mlo_internal.hpp
 	mloUtils.hpp
-	#	MlOpenConvDirGenFwd.cl
-	#MLOpenConvDirUni.cl
+	Common.hpp
 	)
 
 if( MLOpen_BACKEND MATCHES "OpenCL")
