created the convolution driver class and main() to call the driver

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -9,6 +9,8 @@ if( ${BUILD64} )
 	set_property( GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS TRUE )
 endif( )
 
-add_executable(MLOpenDriver MLOpenDriver.cpp InputFlags.cpp)
+#add_executable(MLOpenDriver MLOpenDriver.cpp InputFlags.cpp)
+
+add_executable(MLOpenDriver main.cpp InputFlags.cpp)
 target_link_libraries(MLOpenDriver MLOpen)
 
