Rename files in the src tree

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,10 +59,10 @@ set( MLOpen_Source
 	include/mlopen/oclkernel.hpp
 	include/mlopen/tensor.hpp
 	include/mlopenTypes.h
-	kernelcache.cpp
-	mloclutil.cpp
-	mlodirconv.cpp
-	oclkernel.cpp
+	kernel_cache.cpp
+	mlo_cl_util.cpp
+	mlo_dir_conv.cpp
+	ocl_kernel.cpp
 	tensor.cpp
 	tensor_api.cpp
 	)
