--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,10 +53,13 @@ set( MLOpen_Source
 	Tensor_API.cpp
 	Convolution.hpp
 	Convolution.cpp
-	pooling.hpp
 	Convolution_API.cpp
+	pooling.hpp
 	pooling.cpp
 	pooling_api.cpp
+	lrn.hpp
+	lrn.cpp
+	lrn_api.cpp
 	KernelCache.cpp
 	KernelCache.hpp
 	OCLKernel.hpp
@@ -75,6 +78,7 @@ if( MLOpen_BACKEND MATCHES "OpenCL")
 		OCL/TensorOCL.cpp
 		OCL/ConvolutionOCL.cpp
 		OCL/pooling_ocl.cpp
+		OCL/lrn_ocl.cpp
 		OCL/CLHelper.hpp
 		OCL/CLHelper.cpp)
 endif()
