Remvoe disabling of warnings and make sure opencl headers are specified as system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,7 +106,7 @@ GENERATE_EXPORT_HEADER(MLOpen)
 # MLOpen depends on OpenCL
 if( MLOPEN_BACKEND MATCHES "OpenCL")
 	MESSAGE( STATUS "MLOpen linking OpenCL: ${OPENCL_INCLUDE_DIRS}" )
-	target_include_directories(MLOpen PUBLIC ${OPENCL_INCLUDE_DIRS} )
+	target_include_directories(MLOpen SYSTEM PUBLIC ${OPENCL_INCLUDE_DIRS} )
 	target_link_libraries( MLOpen ${OPENCL_LIBRARIES} )
 endif()
 
