Embed kernels into library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,16 +72,11 @@ endif()
 set ( MLOpen_Headers_Public
 	${PROJECT_SOURCE_DIR}/include/mlopen.h
 	${PROJECT_BINARY_DIR}/src/include/MLOpen-version.h
-	${PROJECT_BINARY_DIR}/src/mlopen_export.h
+	${PROJECT_BINARY_DIR}/src/include/mlopen_export.h
+	# ${PROJECT_BINARY_DIR}/src/mlopen_export.h
 	)
 
 install(FILES ${MLOpen_Headers_Public} DESTINATION include)
-
-set( MLOpen_DIRS_INCLUDE
-	${CMAKE_SOURCE_DIR}/include
-	${CMAKE_SOURCE_DIR}/src/include
-	${CMAKE_SOURCE_DIR}/src
-	${PROJECT_BINARY_DIR}/src)
 
 set( MLOpen_API ${CMAKE_SOURCE_DIR}/include/mlopen.h )
 source_group( "Header Files\\Public" FILES ${MLOpen_Headers_Public} )
