Add missing src file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,9 +53,9 @@ function(add_kernels)
 		string(MAKE_C_IDENTIFIER "${BASE_NAME}" VAR_NAME)
 		string(TOUPPER "${VAR_NAME}" VAR_NAME)
 		bin2h(SOURCE_FILE ${KERNEL_FILE} HEADER_FILE ${KERNELS_HEADER} VARIABLE_NAME ${VAR_NAME} NULL_TERMINATE APPEND)
-		list(APPEND INIT_KERNELS_LIST "{ \"${BASE_NAME}\", +${VAR_NAME} }")
+		list(APPEND INIT_KERNELS_LIST "    { \"${BASE_NAME}\", ${VAR_NAME} }")
 	endforeach()
-	string(REPLACE ";" "," INIT_KERNELS "${INIT_KERNELS_LIST}")
+	string(REPLACE ";" ",\n" INIT_KERNELS "${INIT_KERNELS_LIST}")
 	configure_file(Kernels/kernel.cpp.in kernel.cpp)
 endfunction()
 
