Use uppercase to make key lookup case insensitive

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,10 +50,10 @@ function(add_kernels)
 	file(WRITE ${KERNELS_HEADER} "")
 	foreach(KERNEL_FILE ${ARGN})
 		get_filename_component(BASE_NAME ${KERNEL_FILE} NAME_WE)
-		string(MAKE_C_IDENTIFIER "${BASE_NAME}" VAR_NAME)
-		string(TOUPPER "${VAR_NAME}" VAR_NAME)
+		string(TOUPPER "${BASE_NAME}" KEY_NAME)
+		string(MAKE_C_IDENTIFIER "${KEY_NAME}" VAR_NAME)
 		bin2h(SOURCE_FILE ${KERNEL_FILE} HEADER_FILE ${KERNELS_HEADER} VARIABLE_NAME ${VAR_NAME} NULL_TERMINATE APPEND)
-		list(APPEND INIT_KERNELS_LIST "    { \"${BASE_NAME}\", ${VAR_NAME} }")
+		list(APPEND INIT_KERNELS_LIST "    { \"${KEY_NAME}\", ${VAR_NAME} }")
 	endforeach()
 	string(REPLACE ";" ",\n" INIT_KERNELS "${INIT_KERNELS_LIST}")
 	configure_file(Kernels/kernel.cpp.in kernel.cpp)
