--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,6 +120,11 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
         ${PROJECT_BINARY_DIR}/db.cpp
         ${PROJECT_BINARY_DIR}/kernel.cpp
 		)
+	# Install db files
+	install(FILES 
+		Kernels/Fiji_64_1000.cd.rdb.txt
+		Kernels/Fiji_64_1050.cd.pdb.txt
+	 DESTINATION share/mlopen/db)
 endif()
 
 if( MLOPEN_BACKEND MATCHES "HIP")
@@ -131,7 +136,7 @@ if( MLOPEN_BACKEND MATCHES "HIP")
 endif()
 
 set ( MLOpen_Headers_Public
-	${PROJECT_SOURCE_DIR}/include/mlopen.h
+	${CMAKE_SOURCE_DIR}/include/mlopen.h
 	${PROJECT_BINARY_DIR}/include/MLOpen-version.h
 	${PROJECT_BINARY_DIR}/include/mlopen_export.h
 	)
