--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -121,7 +121,7 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
 		)
 	# Install db files
 	install(FILES 
-		Kernels/Fiji_64_1000.cd.rdb.txt
+		Kernels/Fiji_64_1000.cd.pdb.txt
 		Kernels/Fiji_64_1050.cd.pdb.txt
 	 DESTINATION share/mlopen/db)
 endif()
