--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,13 +9,17 @@ else()
     add_definitions(-DMLOPEN_TEST_ALL=0)
 endif()
 
-find_package(Threads)
+find_package(Threads REQUIRED)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure -C ${CMAKE_CFG_INTDIR})
 add_custom_target(tests)
 
 function(add_test_executable TEST_NAME)
     add_executable (${TEST_NAME} EXCLUDE_FROM_ALL ${ARGN})
     target_link_libraries(${TEST_NAME} ${CMAKE_THREAD_LIBS_INIT})
+    # Older versions of cmake do not add flags correctly
+    if("${CMAKE_VERSION}" VERSION_LESS 3.0 AND CMAKE_COMPILER_IS_GNUXX)
+        set_target_properties(${TEST_NAME} PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)
+    endif()
     if(WIN32)
         add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${LIBRARY_OUTPUT_PATH} COMMAND $<TARGET_FILE:${TEST_NAME}>)
     else()
