--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,7 +17,7 @@ function(add_test_executable TEST_NAME)
     add_executable (${TEST_NAME} EXCLUDE_FROM_ALL ${ARGN})
     target_link_libraries(${TEST_NAME} ${CMAKE_THREAD_LIBS_INIT})
     # Older versions of cmake do not add flags correctly
-    if("${CMAKE_VERSION}" VERSION_LESS 3.0 AND CMAKE_COMPILER_IS_GNUXX)
+    if(${CMAKE_VERSION} VERSION_LESS 3.0 AND CMAKE_CXX_COMPILER_ID MATCHES "GNU") 
         set_target_properties(${TEST_NAME} PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)
     endif()
     if(WIN32)
