--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,6 +105,7 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
 		Kernels/MLOpenConv1x1.cl
 		Kernels/MLOpenConv1x1L.cl
 		Kernels/MLOpenConv1x1PS.cl
+		Kernels/MLOpenConv1x1PS_LW.cl
 	)
 	configure_file(db.cpp.in db.cpp)
 	list(APPEND MLOpen_Source 
