Set up loading and compiling a kernel

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -95,7 +95,7 @@ set( MLOpen_Source
 	tensor_api.cpp
 	)
 
-if( MLOPEN_BACKEND MATCHES "OpenCL")
+if( MLOPEN_BACKEND STREQUAL "OpenCL" OR MLOPEN_BACKEND STREQUAL "HIPOC")
 	add_kernels(
 		Kernels/MLOpenConvDirUni.cl
 		Kernels/MLOpenConvDirUni2.cl
@@ -121,7 +121,6 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
 		lrn.cpp
 		mlo_dir_conv.cpp
 		ocl/activ_ocl.cpp
-		ocl/clhelper.cpp
 		ocl/convolutionocl.cpp
 		ocl/handleocl.cpp
 		ocl/lrn_ocl.cpp
@@ -134,7 +133,6 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
 		ocl/utilocl.cpp
 		pooling.cpp
         ocl/oclerrors.cpp
-        ocl_kernel.cpp
         ${PROJECT_BINARY_DIR}/db.cpp
         ${PROJECT_BINARY_DIR}/kernel.cpp
 		)
@@ -144,7 +142,20 @@ if( MLOPEN_BACKEND MATCHES "OpenCL")
 	 DESTINATION share/mlopen/db)
 endif()
 
-if( MLOPEN_BACKEND MATCHES "HIP")
+if( MLOPEN_BACKEND STREQUAL "OpenCL" )
+	list(APPEND MLOpen_Source 
+        ocl_kernel.cpp
+		ocl/clhelper.cpp
+	)
+endif()
+
+if( MLOPEN_BACKEND STREQUAL "HIPOC")
+	list(APPEND MLOpen_Source 
+		hip/handlehip.cpp
+		)
+endif()
+
+if( MLOPEN_BACKEND STREQUAL "HIP")
 	list(APPEND MLOpen_Source 
 		hip/handlehip.cpp
 		hip/convolutionhip.cpp
@@ -187,7 +198,7 @@ GENERATE_EXPORT_HEADER(MLOpen
 )
 ############################################################
 # MLOpen depends on OpenCL
-if( MLOPEN_BACKEND MATCHES "OpenCL")
+if( MLOPEN_BACKEND STREQUAL "OpenCL")
 	MESSAGE( STATUS "MLOpen linking OpenCL: ${OPENCL_INCLUDE_DIRS}" )
 	target_include_directories(MLOpen SYSTEM PUBLIC ${OPENCL_INCLUDE_DIRS} )
 	target_link_libraries( MLOpen ${OPENCL_LIBRARIES} )
