--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,11 +43,8 @@ message( STATUS "CMAKE_BUILD_TYPE= ${CMAKE_BUILD_TYPE}" )
 # This is incremented when the ABI to the library changes
 set( MLOpen_SOVERSION 1 )
 
-include(Bin2H)
 function(add_kernels)
 	set(INIT_KERNELS_LIST)
-	set(KERNELS_HEADER "${PROJECT_BINARY_DIR}/include/mlopen_kernels.h")
-	file(WRITE ${KERNELS_HEADER} "#ifndef GUARD_MLOPEN_KERNELS_HPP_\n#define GUARD_MLOPEN_KERNELS_HPP_\n")
 	foreach(KERNEL_FILE ${ARGN})
 		if("${CMAKE_VERSION}" VERSION_LESS 3.0)
 			configure_file(${KERNEL_FILE} ${KERNEL_FILE}.delete)
@@ -55,13 +52,10 @@ function(add_kernels)
 			set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS ${KERNEL_FILE})
 		endif()
 		get_filename_component(BASE_NAME ${KERNEL_FILE} NAME_WE)
-		message(STATUS "Storing ${BASE_NAME}")
 		string(TOUPPER "${BASE_NAME}" KEY_NAME)
 		string(MAKE_C_IDENTIFIER "${KEY_NAME}" VAR_NAME)
-		bin2h(SOURCE_FILE ${KERNEL_FILE} HEADER_FILE ${KERNELS_HEADER} VARIABLE_NAME ${VAR_NAME} NULL_TERMINATE APPEND)
 		list(APPEND INIT_KERNELS_LIST "    { \"${KEY_NAME}\", ${VAR_NAME} }")
 	endforeach()
-	file(APPEND ${KERNELS_HEADER} "\n#endif\n")
 	string(REPLACE ";" ",\n" INIT_KERNELS "${INIT_KERNELS_LIST}")
 	configure_file(Kernels/kernel.cpp.in kernel.cpp)
 endfunction()
@@ -165,6 +159,7 @@ add_library( MLOpen
 	${MLOpen_Source}
 	)
 
+ADD_DEPENDENCIES(MLOpen addkernels_run)
 
 clang_tidy_check(MLOpen)
 set( MLOpen_DIRS_INCLUDE
