--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,6 +152,8 @@ endif()
 if( MLOPEN_BACKEND STREQUAL "HIPOC")
 	list(APPEND MLOpen_Source 
 		hip/handlehip.cpp
+		hipoc/hipoc_kernel.cpp
+		hipoc/hipoc_program.cpp
 		)
 endif()
 
