Added EXCLUDE_FROM_ALL to addkernels.

--- a/AddKernels/CMakeLists.txt
+++ b/AddKernels/CMakeLists.txt
@@ -2,4 +2,4 @@ PROJECT(AddKernels)
 
 SET(ADD_KERNELS_SOURCE addkernels.cpp)
 
-ADD_EXECUTABLE(addkernels ${ADD_KERNELS_SOURCE})
+ADD_EXECUTABLE(addkernels EXCLUDE_FROM_ALL ${ADD_KERNELS_SOURCE})
