Updates to compling

--- a/src/Kernels/kernel.cpp.in
+++ b/src/Kernels/kernel.cpp.in
@@ -1,19 +1,10 @@
 #include <mlopen/kernel.hpp>
+#include <mlopen/replace.hpp>
 #include <map>
 #include <algorithm>
 #include "mlopen_kernels.h"
 
 namespace mlopen {
-
-std::string ReplaceString(std::string subject, const std::string& search, const std::string& replace) 
-{
-    size_t pos = 0;
-    while ((pos = subject.find(search, pos)) != std::string::npos) {
-         subject.replace(pos, search.length(), replace);
-         pos += replace.length();
-    }
-    return subject;
-}
 
 const std::map<std::string, const char *> kernels {
 ${INIT_KERNELS}
